--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,8 @@
     ],
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0",
-        "laravel/prompts": "^0.1.0"
+        "laravel/framework": "^11.0|^12.0",
+        "laravel/prompts": "^0.1.0|^0.3.0"
     },
     "require-dev": {
         "laravel/pint": "^1.24",
