Update composer.json description to clarify the purpose of the MSJ Framework

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "reysilvaa12/msjframework",
-    "description": "MSJ Framework - Laravel CRUD Generator with Interactive Wizard",
+    "name": "reyworkbench/msjframework",
+    "description": "MSJ Framework - Base Framework for Laravel MSJ Framework",
     "keywords": [
         "laravel",
         "crud",
