Change license from MIT to proprietary and update copyright information in LICENSE file. Adjust README.md to reflect new licensing terms and improve formatting.

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "controller-generator"
     ],
     "type": "library",
-    "license": "MIT",
+    "license": "proprietary",
     "authors": [
         {
             "name": "Reynald Silva",
