--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
     },
     "require-dev": {
         "laravel/pint": "^1.24",
-        "phpunit/phpunit": "^11.0"
+        "phpunit/phpunit": "^11.0",
+        "barryvdh/laravel-ide-helper": "^3.0"
     },
     "autoload": {
         "psr-4": {
