refactor: Simplify namespace from MSJFramework\LaravelGenerator to MSJFramework
- Updated composer.json autoload PSR-4 mappings to use MSJFramework\ instead of MSJFramework\LaravelGenerator\
- Changed service provider class name from MSJServiceProvider to ServiceProvider
- Updated all namespace declarations across Console Commands, Services, and ServiceProvider files
- Modified provider reference in PublishService to match new namespace structure

--- a/composer.json
+++ b/composer.json
@@ -49,18 +49,18 @@
     },
     "autoload": {
         "psr-4": {
-            "MSJFramework\\LaravelGenerator\\": "src/"
+            "MSJFramework\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "MSJFramework\\LaravelGenerator\\Tests\\": "tests/"
+            "MSJFramework\\Tests\\": "tests/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "MSJFramework\\LaravelGenerator\\MSJServiceProvider"
+                "MSJFramework\\ServiceProvider"
             ],
             "aliases": {}
         }
