refactor: update composer.json for improved dependency management and build scripts

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "reyworkbench/msjframework",
+    "name": "msjit/msjframework",
     "description": "MSJ Framework - Base Framework for Laravel MSJ Framework",
     "keywords": [
         "laravel",
